error handling for entity not found added